# AI_PVoiceNote_App

./: .gitignore  CLAUDE.md  pyproject.toml
app/: main.py
app/core/: audio_importer.py  audio_recorder.py  exporter.py  knowledge_base.py  models.py  rag_corrector.py  session_manager.py  stream_processor.py  summarizer.py  transcriber.py
app/data/: config_manager.py  feedback_store.py
app/ui/: dashboard_view.py  feedback_view.py  main_view.py  settings_view.py  terms_view.py
config/: default.yaml
doc/history/: decision_20260404_roles.md  decision_20260405_architecture_overhaul.md  decision_20260406_model_selection.md  decision_20260417_mic_live_indicator.md  devlog_20260404.md  devlog_20260405.md  devlog_20260405_s_phase.md  devlog_20260405_s_phase2.md  devlog_20260405_s_phase4.md  devlog_20260405_s_ui_fix.md  devlog_20260406.md  devlog_20260406_model_fix.md  devlog_20260406_v_phase.md  devlog_20260407_default_e2b.md  devlog_20260408.md  devlog_20260408_filepicker_api.md  devlog_20260408_flet_084_migration.md  devlog_20260409_lifecycle_dropdown.md  devlog_20260416_builderA_bug11_10_12.md  devlog_20260416_builderA_bug9.md  devlog_20260416_builderB_bug8.md  devlog_20260416_researcher_pipeline_arch.md  devlog_20260416_verifier_vphase3.md  (+12 more)
tests/: test_audio_importer.py  test_audio_recorder.py  test_config_manager.py  test_e2e_real_audio.py  test_exporter.py  test_feedback_store.py  test_knowledge_base.py  test_main_pipeline_lifecycle.py  test_models.py  test_rag_corrector.py  test_session_manager.py  test_stream_processor.py  test_summarizer.py  test_transcriber.py
(+23 files in other folders)
